--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.csv filter=lfs diff=lfs merge=lfs -text
-final_item_features.csv filter=lfs diff=lfs merge=lfs -text
+# *.csv filter=lfs diff=lfs merge=lfs -text
+# final_item_features.csv filter=lfs diff=lfs merge=lfs -text
