let the workers live

--- a/server/uwsgi.ini
+++ b/server/uwsgi.ini
@@ -6,3 +6,8 @@ socket = 0.0.0.0:8080
 protocol = http
 vacuum = true
 die-on-term = true
+
+harakiri = 0
+worker-reload-mercy = 60
+max-requests = 0
+max-worker-lifetime = 0
